--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="book1.jpg" alt="Book 1">
                 <h3>Book 1</h3>
                 <p>Author: John Doe</p>
-                <p>Price: $19.99</p>
+                <p class="dam">Price: $19.99</p>
                 <button>Add to Cart</button>
             </div>
             <div class="book">
