--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>My Bookstore</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -20,21 +21,40 @@
 
     <main>
         <section id="books">
-            <h2>Featured Books</h2>
+
             <div class="book">
-                <img src="book1.jpg" alt="Book 1">
+                <img src="img/img1.jpg" alt="Book 1">
                 <h3>Book 1</h3>
                 <p>Author: John Doe</p>
-                <p class="dam">Price: $19.99</p>
+                <p class="price" id="dam"></p>
                 <button>Add to Cart</button>
             </div>
             <div class="book">
-                <img src="book2.jpg" alt="Book 2">
+                <img src="img/img2.jpg" alt="Book 2">
                 <h3>Book 2</h3>
                 <p>Author: Jane Smith</p>
-                <p>Price: $24.99</p>
+                <p class="price">$10</p>
                 <button>Add to Cart</button>
+
             </div>
+            <div class="book">
+                <img src="img/img3.png" alt="Book 2">
+                <h3>Book 2</h3>
+                <p>Author: Jane Smith</p>
+                <p class="price">$25</p>
+                <button>Add to Cart</button>
+
+            </div>
+            <div class="book">
+                <img src="img/img4.jpg" alt="Book 2">
+                <h3>Book 2</h3>
+                <p>Author: Jane Smith</p>
+                <p class="price">$13</p>
+                <button>Add to Cart</button>
+
+            </div>
+
+
         </section>
     </main>
 
