--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>My Bookstore</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script>
+        function updatePrice() {
+            var price = Math.floor(Math.random() * 20); // Generate random number between 20 and 30
+            document.getElementById("dam").innerHTML = "$" + price;
+            console.log(price);
+        }
+        updatePrice(); // Initial price update on website
+
+    </script>
 </head>
 
 <body>
