--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <title>My Bookstore</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <script>
-        function updatePrice() {
-            var price = Math.floor(Math.random() * 20); // Generate random number between 20 and 30
-            document.getElementById("dam").innerHTML = "$" + price;
-            console.log(price);
-        }
-        updatePrice(); // Initial price update on website
-
-    </script>
+    <!--  -->
 </head>
 
 <body>
@@ -42,23 +34,23 @@
                 <img src="img/img2.jpg" alt="Book 2">
                 <h3>Book 2</h3>
                 <p>Author: Jane Smith</p>
-                <p class="price">$10</p>
+                <p class="price" id="book2"> Price:$10</p>
                 <button>Add to Cart</button>
 
             </div>
             <div class="book">
                 <img src="img/img3.png" alt="Book 2">
-                <h3>Book 2</h3>
+                <h3>Book 3</h3>
                 <p>Author: Jane Smith</p>
-                <p class="price">$25</p>
+                <p class="price"> Price:$25</p>
                 <button>Add to Cart</button>
 
             </div>
             <div class="book">
                 <img src="img/img4.jpg" alt="Book 2">
-                <h3>Book 2</h3>
+                <h3>Book 4</h3>
                 <p>Author: Jane Smith</p>
-                <p class="price">$13</p>
+                <p class="price">Price:$13</p>
                 <button>Add to Cart</button>
 
             </div>
