--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>My Bookstore</h1>
+        <h1>Book Bazaaar</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -54,6 +54,42 @@
                 <button>Add to Cart</button>
 
             </div>
+            <div class="book">
+                <img src="img/img3.png" alt="Book 2">
+                <h3>Book 3</h3>
+                <p>Author: Jane Smith</p>
+                <p class="price"> Price:$25</p>
+                <button>Add to Cart</button>
+
+            </div>
+            <div class="book">
+                <img src="img/img4.jpg" alt="Book 2">
+                <h3>Book 4</h3>
+                <p>Author: Jane Smith</p>
+                <p class="price">Price:$13</p>
+                <button>Add to Cart</button>
+
+            </div>
+            <div class="book">
+                <img src="img/img3.png" alt="Book 2">
+                <h3>Book 3</h3>
+                <p>Author: Jane Smith</p>
+                <p class="price"> Price:$25</p>
+                <button>Add to Cart</button>
+
+            </div>
+            <div class="book">
+                <img src="img/img4.jpg" alt="Book 2">
+                <h3>Book 4</h3>
+                <p>Author: Jane Smith</p>
+                <p class="price">Price:$13</p>
+                <button>Add to Cart</button>
+
+            </div>
+            
+
+
+
 
 
         </section>
@@ -67,3 +103,4 @@
 </body>
 
 </html>
+
